CORS policy fix for deploy